data/derived/comb/progs/unify/prog8231.ml.out
Characters 29-59:
  let fixpoint (f,b) = wwhile ((f, f(b) = f(b-1) && f(b) = b), b);;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
